--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.0", features = ["derive"] }
+reqwest = { version = "0.12", features = ["blocking","json"] }
+serde = { version = "1.0.202", features = ["derive"] }
+serde_json = "1.0.117"
+
