--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
+dotenv = "0.15.0"
 reqwest = { version = "0.12", features = ["blocking","json"] }
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
